<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/footprint_daily"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/bargraph"
            android:layout_marginTop="30dp"
            >

        </com.github.mikephil.charting.charts.BarChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/footprint_weekly"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20dp"
/>

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/bargraph2"
            android:layout_marginTop="10dp"
            >

        </com.github.mikephil.charting.charts.BarChart>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/footprint_region"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/bargraph4"
            android:layout_marginTop="10dp"
            >

        </com.github.mikephil.charting.charts.BarChart>

    </LinearLayout>
</ScrollView>